# quresis-core

./: .gitignore  ARCHITECTURE.md  Anchor.toml  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/quresis/: Cargo.toml
programs/quresis-hook/: Cargo.toml
programs/quresis-hook/src/: lib.rs
programs/quresis/src/: lib.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  keypair.ts  signer.ts  types.ts  utils.ts
tests/: quresis-hook.ts  quresis.ts  video-demo.ts
