[package]
name = "quresis-hook"
version = "0.1.0"
description = "SPL-2022 Transfer Hook for Post-Quantum Signature Enforcement"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Quresis-Protocol/quresis-core"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "quresis_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

# Reference to quresis core for identity PDA validation
quresis = { path = "../quresis", features = ["cpi"] }

[dev-dependencies]
# No dev-dependencies to avoid edition2024 conflicts from blake3/constant_time_eq

# Suppress warnings from Anchor macros that use cfg conditions
# not declared in this crate's features
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))'
] }
