[package]
name = "quresis"
version = "0.1.0"
description = "Post-Quantum Security Standard for Real World Assets (RWA) on Solana"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Quresis-Protocol/quresis-core"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "quresis"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
# anchor-spl will be added in quresis-hook for Transfer Hook implementation
# Temporarily removed to avoid edition2024 incompatibility with platform-tools

[dev-dependencies]
anchor-client = "0.32.1"

# Suppress warnings from Anchor macros that use cfg conditions
# not declared in this crate's features
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))'
] }
